[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "QtPy"
dynamic = ["version"]
description = "Provides an abstraction layer on top of the various Qt bindings (PyQt5/6 and PySide2/6)."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Colin Duquesnoy and the Spyder Development Team", email = "spyder.python@gmail.com" }
]
maintainers = [
    { name = "Spyder Development Team and QtPy Contributors", email = "spyder.python@gmail.com" }
]
license = "MIT"
keywords = ["qt", "PyQt5", "PyQt6", "PySide2", "PySide6"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Software Development :: Widget Sets",
]
dependencies = ["packaging"]

[project.urls]
"Github" = "https://github.com/spyder-ide/qtpy"
"Bug Tracker" = "https://github.com/spyder-ide/qtpy/issues"
"Parent Project" = "https://www.spyder-ide.org/"

[project.optional-dependencies]
test = [
    "pytest>=6,!=7.0.0,!=7.0.1",
    "pytest-cov>=3.0.0",
    "pytest-qt",
]

[project.scripts]
qtpy = "qtpy.__main__:main"

[tool.setuptools.dynamic]
version = { attr = "qtpy.__version__" }

[tool.setuptools.packages.find]
include = ["qtpy"]

[tool.setuptools.package-data]
qtpy = ["py.typed"]

[tool.black]
target-version = ['py39', 'py310', 'py311', 'py312']
skip-string-normalization = true
line-length = 79
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | examples
    | vendored
    | _vendor
  )/
  | napari/resources/qt.py
  | tools/minreq.py
)
'''

[tool.ruff]
line-length = 79
target-version = "py39"

[tool.ruff.lint]
select = [
    "E", "F", "W", # flake8
    "UP", # pyupgrade
    "I", # isort
    "YTT", #flake8-2020
    "TCH", # flake8-type-checing
    "BLE", # flake8-blind-exception
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "COM", # flake8-commas
    "SIM", # flake8-simplify
    "INP", # flake8-no-pep420
    "PYI", # flake8-pyi
    "Q", # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "TID",  # flake8-tidy-imports, replace absolutify import
    "TRY", # tryceratops
    "ICN", # flake8-import-conventions
    "RUF", # ruff specyfic rules
]
ignore = [
    "F403", # star import
    "E501", # line too long - black will handle it
    "F405", # star import
    "F401", # unused import - cannot determine wole list of symbols to export and use in __all__
]

[tool.ruff.lint.per-file-ignores]
"qtpy/QtCore.py" = ["F821"]
"qtpy/__init__.py" = ["TRY003", "F811"]
"qtpy/uic.py" = ["TRY003"]
