[metadata]
name = QtPy
keywords = qt PyQt4 PyQt5 PySide
url = https://github.com/spyder-ide/qtpy
license = MIT
author = Colin Duquesnoy, The Spyder Development Team
author_email = goanpeca@gmail.com
maintainer = Gonzalo Peña-Castellanos
maintainer_email = goanpeca@gmail.com
description = Provides an abstraction layer on top of the various Qt bindings (PyQt5, PyQt4 and PySide) and additional custom QWidgets.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: X11 Applications :: Qt
    Environment :: Win32 (MS Windows)
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[options]
packages = find:

[options.packages.find]
exclude =
    contrib
    docs
    tests*

[bdist_wheel]
universal = 1
