[metadata]
name = QtPy
description = Provides an abstraction layer on top of the various Qt bindings (PyQt5, PyQt4 and PySide) and additional custom QWidgets.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/spyder-ide/qtpy
author = Colin Duquesnoy, The Spyder Development Team
author_email = goanpeca@gmail.com
maintainer = Gonzalo Peña-Castellanos
maintainer_email = goanpeca@gmail.com
license = MIT
license_file = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Win32 (MS Windows)
    Environment :: X11 Applications :: Qt
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
keywords = qt PyQt4 PyQt5 PySide

[options]
packages = find:
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*

[options.packages.find]
exclude =
    contrib
    docs
    tests*

[bdist_wheel]
universal = 1
