[metadata]
name = QtPy
version = attr: qtpy.__version__
description = Provides an abstraction layer on top of the various Qt bindings (PyQt5/6 and PySide2/6)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/spyder-ide/qtpy
author = Colin Duquesnoy and the Spyder Development Team
author_email = spyder.python@gmail.com
maintainer = Spyder Development Team and QtPy Contributors
maintainer_email = spyder.python@gmail.com
license = MIT
license_file = LICENSE.txt
license_files =
    AUTHORS.md
    LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: MacOS X
    Environment :: Win32 (MS Windows)
    Environment :: X11 Applications :: Qt
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: User Interfaces
    Topic :: Software Development :: Widget Sets
keywords = qt PyQt5 PyQt6 PySide2 PySide6
project_urls =
    Github = https://github.com/spyder-ide/qtpy
    Bug Tracker = https://github.com/spyder-ide/qtpy/issues
    Parent Project = https://www.spyder-ide.org/

[options]
packages = find:
install_requires =
    packaging
python_requires = >=3.7
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    contrib
    docs
    tests*

[options.extras_require]
test =
    pytest>=6.0.0,<7.0
    pytest-cov>=2.11.0
